// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ignores file name contains emoji  1`] = `
{
  "stderr": "",
  "stdout": "not-ignored.js",
  "write": [],
}
`;

exports[`stdin  1`] = `
{
  "stderr": "",
  "stdout": ".name {                         display: none; }",
  "write": [],
}
`;
